@@ -38,6 +38,6 @@ class DataClass;
 #include "FilesClass.h"
 #include "OrphanDialogClass.h"
 
-enum {ABOUT=0,ABOUTQT,QUERY,INFO,WARN,FATAL,GETINPUT,GETITEM,GETFORM,GETLIST,SHOWTEXTFILE,SHOWIMAGEFILE,GETCOLOUR,GETFONT,GETTEXT,TAILBOX,NOTEPAD,RICHTEXT,OPENFILE,SAVEFILE,PREFSDIALOG,TABBEDPREFSDIALOG,TRAYMENU,YADQTHELP};
+enum {ABOUT=0,ABOUTQT,QUERY,INFO,WARN,FATAL,GETINPUT,GETITEM,GETFORM,GETLIST,SHOWTEXTFILE,SHOWIMAGEFILE,GETCOLOUR,GETFONT,GETTEXT,TAILBOX,NOTEPAD,RICHTEXT,OPENFILE,SAVEFILE,OPENFOLDER,PREFSDIALOG,TABBEDPREFSDIALOG,TRAYMENU,YADQTHELP};
 
 #endif
